--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - dev
       - master
       - refactor
+      - Updated-Extractor
       - release**
     paths-ignore:
       - 'README.md'
